# cognito-work

./: README.md  admin_create_user.py  app.py  confirm_signup.py  delete_user.py  env.py  fastapi.sh  pyproject.toml  setting.sh  signin.py  signout.py  verify_access_token.py  verify_id_token.py  verify_token.py
cmd/: admin_create_user.py  confirm_signup.py  delete_user.py  list_users.py  signin_srp.py  signout.py  signup.py  verify_access_token.py  verify_id_token.py
static/: common.js
templates/: code.html  index.html
