[tool.poetry]
name = "cognito-work"
version = "0.1.0"
description = ""
authors = ["ng3rdstmadgke <ng3rdstmadgke@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.93"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
requests = "^2.31.0"
warrant = "^0.6.1"
fastapi = "^0.110.2"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
